test/testdata/list/not_callable_error.lox
["foo"](); // error: 'list' value is not callable
